[package]
name = "sourceview4-sys"
version = "0.2.0"
authors = ["Christopher Davis <brainblasted@disroot.org>"]
description = "FFI bindings for GtkSourceView 4"
license = "LGPL-2.1-or-later"
edition = "2021"
documentation = "https://world.pages.gitlab.gnome.org/Rust/sourceview4-rs/sourceview4_sys/"
build = "build.rs"
exclude = ["gir-files/*", "gir/"]
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.gtksourceview_4]
name = "gtksourceview-4"
version = "4"

[dependencies]
libc = "0.2"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/gtk3-rs"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
pkg-config = "0.3"
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
