[package]
name = "sourceview4-sys"
version = "0.3.0"
authors = ["Christopher Davis <brainblasted@disroot.org>"]
description = "FFI bindings for GtkSourceView 4"
license = "LGPL-2.1-or-later"
edition = "2021"
documentation = "https://world.pages.gitlab.gnome.org/Rust/sourceview4-rs/stable/latest/docs/sourceview4_sys"
build = "build.rs"
exclude = ["gir-files/*", "gir/"]
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.gtksourceview_4]
name = "gtksourceview-4"
version = "4"

[dependencies]
libc = "0.2"

[dependencies.cairo]
git = "https://github.com/gtk-rs/gtk-rs-core"
package = "cairo-sys-rs"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"
package = "glib-sys"

[dependencies.gobject]
git = "https://github.com/gtk-rs/gtk-rs-core"
package = "gobject-sys"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"
package = "gio-sys"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk3-rs"
package = "gdk-sys"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk3-rs"
package = "gtk-sys"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gtk-rs-core"
package = "gdk-pixbuf-sys"

[dependencies.pango]
git = "https://github.com/gtk-rs/gtk-rs-core"
package = "pango-sys"

[build-dependencies]
pkg-config = "0.3"
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
