[package]
name = "sourceview4-sys"
version = "0.4.0"
authors = ["Christopher Davis <brainblasted@disroot.org>"]
description = "FFI bindings for GtkSourceView 4"
license = "LGPL-2.1-or-later"
edition = "2021"
documentation = "https://world.pages.gitlab.gnome.org/Rust/sourceview4-rs/stable/latest/docs/sourceview4_sys"
build = "build.rs"
exclude = ["gir-files/*", "gir/"]

[package.metadata.docs.rs]
features = ["dox"]

[package.metadata.system-deps.gtksourceview_4]
name = "gtksourceview-4"
version = "4"

[dependencies]
libc = "0.2"

[dependencies.cairo]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.17"
version = "0.17"
package = "cairo-sys-rs"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.17"
version = "0.17"
package = "glib-sys"

[dependencies.gobject]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.17"
version = "0.17"
package = "gobject-sys"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.17"
version = "0.17"
package = "gio-sys"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk3-rs"
package = "gdk-sys"
branch = "0.17"
version = "0.17"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk3-rs"
package = "gtk-sys"
branch = "0.17"
version = "0.17"

[dependencies.gdk_pixbuf]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.17"
version = "0.17"
package = "gdk-pixbuf-sys"

[dependencies.pango]
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.17"
version = "0.17"
package = "pango-sys"

[build-dependencies]
pkg-config = "0.3"
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = ["cairo/dox", "glib/dox", "gobject/dox", "gio/dox", "gtk/dox", "gdk/dox", "gdk_pixbuf/dox"]
