[package]
name = "sourceview4"
version = "0.2.0"
authors = ["Christopher Davis <brainblasted@disroot.org>"]
description = "API bindings for GtkSourceView 4"
license = "LGPL-2.1-or-later"
keywords = ["gtksourceview", "sourceview", "gtk-rs", "gnome"]
repository = "https://gitlab.gnome.org/World/Rust/sourceview4-rs"
documentation = "https://world.pages.gitlab.gnome.org/Rust/sourceview4-rs/sourceview4/"
exclude = ["gir-files/*", "gir/"]

[dependencies]
libc = "0.2"
bitflags = "1.2"
cairo-rs = "0.9"
glib = "0.10"
gio = "0.9"
gdk = "0.13"
gdk-pixbuf = "0.9"
pango = "0.9"
glib-sys = "0.10"
gtk-sys = "0.10"
gobject-sys = "0.10"
gio-sys = "0.10"
gdk-sys = "0.10"


[dependencies.gtk]
version = "0.9"
features = [ "v3_22" ]

[dependencies.sourceview4-sys]
version = "0.2.0"
path = "../sourceview4-sys"

[features]
dox = ["sourceview4-sys/dox"]
