[package]
name = "sourceview4"
version = "0.4.0"
authors = ["Christopher Davis <brainblasted@disroot.org>"]
description = "API bindings for GtkSourceView 4"
license = "LGPL-2.1-or-later"
keywords = ["gtksourceview", "sourceview", "gtk-rs", "gnome"]
repository = "https://gitlab.gnome.org/World/Rust/sourceview4-rs"
documentation = "https://world.pages.gitlab.gnome.org/Rust/sourceview4-rs/stable/latest/docs/sourceview4"
exclude = ["gir-files/*", "gir/"]
edition = "2021"

[dependencies]
libc = "0.2"
bitflags = "1.2"
cairo-rs = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.17", branch = "0.17"}
glib = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.17", branch = "0.17"}
gio = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.17", branch = "0.17"}
gdk = {git = "https://github.com/gtk-rs/gtk3-rs", version = "0.17", branch = "0.17"}
gtk = {git = "https://github.com/gtk-rs/gtk3-rs", version = "0.17", branch = "0.17"}
gdk-pixbuf = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.17", branch = "0.17"}
pango = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.17", branch = "0.17"}
once_cell = "1"


[dependencies.ffi]
package = "sourceview4-sys"
version = "0.4"
path = "../sourceview4-sys"

[features]
dox = ["ffi/dox"]
